--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,16 +1,96 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.guohao.schoolproject.MainActivity" >
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <com.guohao.custom.Title
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </com.guohao.custom.Title>
 
-</RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:background="#fff"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="#fff"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:id="@+id/id_linearlayout_tab01"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/id_imageview_recommend"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:src="@drawable/img310" />
+
+            <TextView
+                android:id="@+id/id_textview_recommend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="答题"
+                android:textColor="#087f78" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/id_linearlayout_tab02"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/id_imageview_all"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:src="@drawable/img80" />
+
+            <TextView
+                android:id="@+id/id_textview_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我"
+                android:textColor="#c9bda6" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/id_linearlayout_tab03"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/id_imageview_my"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:src="@drawable/img98" />
+
+            <TextView
+                android:id="@+id/id_textview_my"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="设置"
+                android:textColor="#c9bda6" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
