--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
             android:layout_height="55dp" >
 
             <EditText
+                android:id="@+id/id_edittext_phone_num"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#fff"
@@ -51,10 +52,11 @@
             android:layout_height="55dp" >
 
             <EditText
+                android:id="@+id/id_edittext_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#fff"
-                android:hint="@string/input_phone_num"
+                android:hint="@string/input_pwd"
                 android:inputType="textPassword"
                 android:paddingLeft="45dp"
                 android:paddingRight="12dp"
@@ -68,10 +70,13 @@
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/img85" />
         </RelativeLayout>
-
         <Button
             style="@style/StyleButtonLogin"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginTop="25dp"
+            android:onClick="login"
+            android:clickable="true"
             android:text="登录" />
 
         <RelativeLayout
@@ -80,8 +85,11 @@
             android:layout_marginTop="20dp" >
 
             <TextView
+                android:id="@+id/id_textview_registe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="registe"
+                android:clickable="true"
                 android:text="注册新用户"
                 android:textColor="#999"
                 android:textSize="13sp" />
@@ -90,7 +98,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="忘记密码？"
+                android:onClick="forgetPwd"
+                android:clickable="true"
+                android:text="@string/forget_pwd_textview"
                 android:textColor="#999"
                 android:textSize="13sp" />
         </RelativeLayout>
@@ -113,6 +123,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:onClick="loginWeiXin"
+                android:clickable="true"
                 android:orientation="vertical" >
 
                 <ImageView
@@ -132,6 +144,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:onClick="loginQQ"
+                android:clickable="true"
                 android:orientation="vertical" >
 
                 <ImageView
@@ -152,6 +166,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/id_linearlayout_login_other"
             android:gravity="center_vertical"
+            android:layout_marginBottom="30dp"
             android:orientation="horizontal" >
 
             <View
