--- a/res/layout/activity_registe.xml
+++ b/res/layout/activity_registe.xml
@@ -2,7 +2,120 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EEE"
     android:orientation="vertical" >
-    
+
+    <com.guohao.custom.Title
+        android:id="@+id/id_custom_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </com.guohao.custom.Title>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp" >
+
+            <EditText
+                android:id="@+id/id_edittext_phone_num"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#fff"
+                android:hint="@string/input_phone_num2"
+                android:inputType="number"
+                android:maxLength="11"
+                android:paddingLeft="45dp"
+                android:paddingRight="12dp"
+                android:textCursorDrawable="@drawable/custom_shape_cursor"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/img88" />
+            <Button 
+                android:layout_width="60dp"
+                android:layout_height="30dp"
+                style="@style/StyleButtonLogin"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="12dp"
+                android:onClick="check"
+           		android:clickable="true"
+                android:text="验证码"/>
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="#666" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp" >
+
+            <EditText
+                android:id="@+id/id_edittext_v_code"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#fff"
+                android:hint="@string/input_v_code"
+                android:inputType="number"
+                android:maxLength="6"
+                android:paddingLeft="45dp"
+                android:paddingRight="12dp"
+                android:textCursorDrawable="@drawable/custom_shape_cursor"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/img316" />
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="#666" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp" >
+
+            <EditText
+                android:id="@+id/id_edittext_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#fff"
+                android:hint="@string/input_pwd2"
+                android:inputType="textPassword"
+                android:maxLength="16"
+                android:paddingLeft="45dp"
+                android:paddingRight="12dp"
+                android:textCursorDrawable="@drawable/custom_shape_cursor"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/img85" />
+        </RelativeLayout>
+		
+        <Button
+            style="@style/StyleButtonLogin"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="25dp"
+            android:onClick="registe"
+            android:clickable="true"
+            android:text="注册" />
+    </LinearLayout>
 
 </LinearLayout>
