--- a/res/layout/fragment_setting.xml
+++ b/res/layout/fragment_setting.xml
@@ -1,12 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:SettingBg="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.guohao.custom.SettingBg
+        android:id="@+id/id_setting01"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="第三个" />
+        SettingBg:img="@drawable/img104"
+        SettingBg:text="版本更新" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#E0E0E0" />
+
+    <com.guohao.custom.SettingBg
+        android:id="@+id/id_setting02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        SettingBg:img="@drawable/img340"
+        SettingBg:text="意见反馈" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#E0E0E0" />
+
+    <com.guohao.custom.SettingBg
+        android:id="@+id/id_setting03"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        SettingBg:img="@drawable/img51"
+        SettingBg:text="修改密码" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#E0E0E0" />
+
+    <com.guohao.custom.SettingBg
+        android:id="@+id/id_setting04"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        SettingBg:img="@drawable/img78"
+        SettingBg:text="注销" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#E0E0E0" />
+
+    <com.guohao.custom.SettingBg
+        android:id="@+id/id_setting05"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        SettingBg:img="@drawable/img339"
+        SettingBg:text="退出" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="#E0E0E0" />
+
+    <com.guohao.custom.SettingBg
+        android:id="@+id/id_setting06"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        SettingBg:img="@drawable/img301"
+        SettingBg:text="关于" />
 
 </LinearLayout>
