--- a/res/layout/custom_setting_bg.xml
+++ b/res/layout/custom_setting_bg.xml
@@ -12,8 +12,7 @@
         android:id="@+id/id_imageview"
         android:layout_width="26dp"
         android:layout_height="26dp"
-        android:layout_centerVertical="true"
-        android:src="@drawable/img104" />
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/id_textview"
@@ -21,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/id_imageview"
-        android:text="版本更新"
         android:layout_marginLeft="10dp"
         android:textSize="15sp" />
 
