--- a/res/layout/fragment_setting.xml
+++ b/res/layout/fragment_setting.xml
@@ -9,6 +9,7 @@
         android:id="@+id/id_setting01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         SettingBg:img="@drawable/img104"
         SettingBg:text="版本更新" />
 
