--- a/res/layout/custom_alertdialog.xml
+++ b/res/layout/custom_alertdialog.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/custom_shape_alertdialog_bg"
-    android:orientation="vertical"
-    android:padding="15dp" >
+    android:padding="10dp" >
 
-    <TextView
-        android:id="@+id/id_textview_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="19sp" />
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/id_textview_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/id_textview_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="19sp" />
+
+        <TextView
+            android:id="@+id/id_textview_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp" >
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true" >
 
         <TextView
             android:id="@+id/id_textview_yes"
@@ -42,4 +50,4 @@
             android:textColor="#4FB7AD" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
