--- a/res/layout/activity_answer_show.xml
+++ b/res/layout/activity_answer_show.xml
@@ -18,12 +18,14 @@
         android:background="#00000000"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:id="@+id/id_linearlayout_content"
+    <ListView
+        android:id="@+id/id_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:orientation="vertical"
+        android:scrollbarSize="3dp"
+        android:scrollbarThumbVertical="@color/scrollBar" >
+    </ListView>
 
 </LinearLayout>
