17-完成基本的登录验证，没有加载对话框

--- a/res/layout/custom_answer_show_bg.xml
+++ b/res/layout/custom_answer_show_bg.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="12dp"
+        android:ellipsize="end"
         android:layout_toRightOf="@id/id_imageview"
         android:textSize="14sp" />
 
