--- a/res/layout/custom_title.xml
+++ b/res/layout/custom_title.xml
@@ -17,15 +17,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="#fff"
-        android:textSize="16sp"
-        android:text="登录"/>
+        android:textSize="16sp"/>
     <TextView 
         android:id="@+id/id_textview_title_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="15dp"
         android:textColor="#fff"
         android:textSize="16sp"/>
 
