--- a/res/layout/activity_setting_change_pwd.xml
+++ b/res/layout/activity_setting_change_pwd.xml
@@ -26,7 +26,7 @@
                 android:layout_height="match_parent"
                 android:background="#fff"
                 android:hint="@string/input_phone_num4"
-                android:inputType="number"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:paddingLeft="45dp"
                 android:paddingRight="12dp"
