--- a/res/layout/activity_setting_change_pwd.xml
+++ b/res/layout/activity_setting_change_pwd.xml
@@ -74,7 +74,7 @@
             android:layout_marginTop="13dp"
             android:clickable="true"
             android:onClick="login"
-            android:text="登录" />
+            android:text="修改" />
     </LinearLayout>
 
 </LinearLayout>
