--- a/res/layout/fragment_answer.xml
+++ b/res/layout/fragment_answer.xml
@@ -69,7 +69,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="书籍查看"
+                android:text="考试记录"
                 android:textColor="#fff"
                 android:textSize="19sp" />
 
@@ -88,6 +88,52 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/id_linearlayout_book"
+            android:background="@drawable/img302" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="80dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/img82" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:background="#ffcc33"
+        android:paddingLeft="15dp"
+        android:onClick="clickMyRecord"
+        android:paddingRight="15dp" >
+
+        <LinearLayout
+            android:id="@+id/id_linearlayout_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我的课程"
+                android:textColor="#fff"
+                android:textSize="19sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="今日课程，提前知晓"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/id_linearlayout_record"
             android:background="@drawable/img302" />
 
         <ImageView
