--- a/res/layout/custom_answer_show_bg.xml
+++ b/res/layout/custom_answer_show_bg.xml
@@ -14,6 +14,7 @@
         android:layout_centerVertical="true" />
 
     <ImageView
+        android:id="@+id/id_imageview_next"
         android:layout_width="23dp"
         android:layout_height="23dp"
         android:layout_alignParentRight="true"
